--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 /eclipse/alapozo/nbproject/private/
+/netbeans/p1/mavenproject1/target/
