--- a/JavaFX/demo/.gitignore
+++ b/JavaFX/demo/.gitignore
@@ -1,7 +1,10 @@
 target/
+*.jar
+*.so
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
