Java-SQL előkészítése 1

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ local.properties
 /netbeans/p1/mavenproject1/target/
 magyar-szavak*
 web2.2*
+/java_alapok/sql/nbproject/private/
+/java_alapok/sql/build/
