--- a/backend/alaprest/src/main/resources/application.properties
+++ b/backend/alaprest/src/main/resources/application.properties
@@ -21,4 +21,5 @@ spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pallas
 spring.datasource.username=pallas
 spring.datasource.password=Oktato123
+#spring.jpa.properties.hibernate.default_schema=pallas
 
