--- a/backend/alaprest/src/main/resources/application.properties
+++ b/backend/alaprest/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.datasource.username=pallas
 spring.datasource.password=Oktato123
 #spring.jpa.properties.hibernate.default_schema=pallas
 
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+management.endpoints.enabled-by-default=true
+
+
+management.endpoint.info.enabled=true
+management.endpoint.health.group.custom.include=diskSpace,ping
+
