--- a/backend/alaprest/src/main/resources/application.properties
+++ b/backend/alaprest/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.username=pallas
 spring.datasource.password=Oktato123
 #spring.jpa.properties.hibernate.default_schema=pallas
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=mappings
 management.endpoint.shutdown.enabled=true
 management.endpoints.enabled-by-default=true
 
