--- a/backend/alaprest/src/main/resources/application.properties
+++ b/backend/alaprest/src/main/resources/application.properties
@@ -13,7 +13,7 @@ welcome.message= Tanfolyam
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.sql.init.mode=always
