--- a/backend/vegyesbolt/src/main/resources/application.properties
+++ b/backend/vegyesbolt/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pallas
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=pallas
+spring.datasource.password=Oktato123
 spring.jpa.properties.hibernate.default_schema=vegyesbolt
 
 management.endpoints.web.exposure.include=mappings
