--- a/backend/agility_PAL/pom.xml
+++ b/backend/agility_PAL/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.agility</groupId>
-	<artifactId>agilty</artifactId>
+	<artifactId>agility</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>agility</name>
 	<description>Demo project for Spring Boot</description>
@@ -69,26 +69,26 @@
 	<build>
 		<plugins>
 			<!--<plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <configuration>
-            <archive>
-            <manifest>
-            <mainClass>fully.qualified.MainClass</mainClass>
-            </manifest>
-            </archive>
-            <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-            </descriptorRefs>
-            </configuration>
-            <executions>
-            <execution>
-            <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;
-            <phase>package</phase> &lt;!&ndash; bind to the packaging phase &ndash;&gt;
-            <goals>
-            <goal>single</goal>
-            </goals>
-            </execution>
-            </executions>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>fully.qualified.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;
+                        <phase>package</phase> &lt;!&ndash; bind to the packaging phase &ndash;&gt;
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
