--- a/backend/agility_PAL/src/main/resources/application.properties
+++ b/backend/agility_PAL/src/main/resources/application.properties
@@ -23,10 +23,7 @@ spring.datasource.username=pallas
 spring.datasource.password=Oktato123
 spring.jpa.properties.hibernate.default_schema=agility
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=mappings
 management.endpoint.shutdown.enabled=true
 management.endpoints.enabled-by-default=true
 
-
-management.endpoint.info.enabled=true
-management.endpoint.health.group.custom.include=diskSpace,ping
