--- a/backend/retail/retail/src/main/resources/application.properties
+++ b/backend/retail/retail/src/main/resources/application.properties
@@ -18,9 +18,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.sql.init.mode=always
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=PAL1995+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pallas
+spring.datasource.username=pallas
+spring.datasource.password=Oktato123
 spring.jpa.properties.hibernate.default_schema=retail
 
 management.endpoints.web.exposure.include=mappings
